packages/kyvernoPolicies/chart/tests/gpol/clone-configs-cel/kyverno-test/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clone-target-ns
