packages/kyvernoPolicies/chart/tests/gpol/clone-configs-cel/kyverno-test/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: clone-configs-context
spec:
  resources:
    - apiVersion: v1
      kind: ConfigMap
      metadata:
        name: clone-source
        namespace: default
      data:
        app: cloned-app
        env: test
