packages/kyvernoPolicies/chart/tests/gpol/clone-configs-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: clone-configs-cel
policies:
  - ../policy.yaml
resources:
  - resource.yaml
context: context.yaml
results:
  - policy: clone-configs-cel
    rule: generate-0
    resources:
      - clone-target-ns
    kind: Namespace
    result: pass
